feat: Major rewrite to API and internals
This is the first step in rewriting to use a reactive API. These changes
update the API and some internals but is not ready for use yet. Test
coverage is lacking and reactive transaction support needs work